<resources>
    <string name="app_name">Cinematic</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="rememberme">Remember Me</string>
    <string name="login">Login</string>
    <string name="facebook_app_id">229172234355742</string>
    <string name="signup">Signup</string>
    <string name="username">User Name</string>
    <string name="fullname">Full Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="createnewaccout">Create New Account</string>
    <string name="wrongpassword">Wrong Password</string>
    <string name="apikey">fec13c5a0623fefac5055a3f7b823553</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pop_movies">popularMovies</string>
    <!--<string name="get_loggedin_pref">loggedIn</string>-->
    <string name="get_fbloggedin_pref">fbloggedIn</string>
    <string name="get_email_pref">KEY_EMAIL</string>
    <string name="get_user_pref">KEY_USER</string>
    <string name="profile_email">Email:</string>
    <string name="profile_phone_number">phone number:</string>
    <string name="profile_name">Name:</string>
    <string-array name="mname">
        <item>android</item>
        <item>cupcake</item>
        <item>aestro</item>
        <item>honey</item>
        <item>blender</item>
    </string-array>
</resources>
