<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.training.cinematic.SignupActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="270dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
          <ImageView
              android:layout_marginLeft="10dp"
              android:layout_weight="0.5"
              android:id="@+id/img_back"
              android:src="@drawable/round_keyboard_backspace_black_18dp"
              android:layout_width="50dp"
              android:layout_height="50dp" />

            <TextView
                android:layout_weight="2.5"
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signup"
                android:textSize="30sp" />
            </LinearLayout>


            <EditText
                android:id="@+id/edt_fullname"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:hint="@string/fullname"
                android:inputType="textPersonName"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/edt_phonenumber"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                android:hint="@string/phonenumber"
                android:inputType="number"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textSize="15sp" />


            <Button
                android:id="@+id/btn_signup"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_style"
                android:text="@string/signup"
                android:textSize="15sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
