<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/last"
    android:orientation="vertical"
    tools:context="com.training.cinematic.activity.LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="260dp"
        android:layout_height="360dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:padding="20dp"
        app:cardBackgroundColor="#81ffffff"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
           <!-- <TextView
                android:id="@+id/txt_loginn"
                android:layout_marginTop="20dp"
                android:text="Login"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />-->

            <ImageView
                android:id="@+id/txt_login"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_logo_cinematic" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#2b000000"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textColor="#fff"
                android:textColorHint="#Afff"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#2b000000"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="#Afff"
                android:textSize="15sp" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#d0ff036c"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/createnewaccout"
                android:textColor="#fff" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
